src/main/resources/static/stylesheet.css
.board {
    height: 750px;
    width: 750px;
    border: solid 10px black;
}

.games-page {
    width: 100%;
    height: 100%;
    background-color: black;
    background-image: url("assets/water_tile.gif");
    background-repeat: no-repeat;
    background-size: cover;
}

.game_view_background {
    background-image: url("assets/blackwater.gif");
    background-repeat: no-repeat;
    background-position: center;
    background-size: 35vh 100vh;
}

.grid-cell {
    font-weight: bold;
    background-color: white;
    border: 1px solid black;
    height: 70px;
    width: 70px;
}

.validLocation {
    background-image: url(assets/shipTexture.jpeg);
    filter:
        brightness(100%) sepia(100%) hue-rotate(190deg) saturate(300%) contrast(1);
    opacity: .5;
}

.invalidLocation {
    background-color: red;
    opacity: .5;
    background-size: 50%;
}

.patrolBoat {
    width: 140px;
    height: 70px;
}

.destroyer {
    width: 210px;
    height: 70px;
}

.submarine {
    width: 210px;
    height: 70px;
}

.battleship {
    width: 280px;
    height: 70px;
}

.aircraftCarrier {
    width: 350px;
    height: 70px;
}

.ship-location {
    background-image: url("assets/abstract-free-old-black-surface-vector-texture.jpg");
    border: double black 10px;
    border-radius: 70px;
    /* background-size: cover; */
    /* filter:
        brightness(300%) sepia(100%) hue-rotate(190deg) saturate(600%) contrast(1); */
}


.grid-flex {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-content: center;
}

.mainTable2 {
    border-left: double;
    border-width: 80px;
    border-color: black;
    border-radius: 100px;
}

.sideTable {
    border-right: double 90px black;
    border-radius: 100px;
}

.hitBoard {
    width: 100%;
    border: solid 10px black;
}

.hitMarker {
    background-size: cover;
    background-image: url("assets/hitMarker.gif");
    filter: grayscale(100%) brightness(40%) sepia(100%) hue-rotate(-50deg) saturate(600%) contrast(0.8);
}

.pendingHit {
    background-image: url("assets/pendingHit.gif");
    background-size: cover;
    /* filter: grayscale(100%) brightness(40%) sepia(100%) hue-rotate(-50deg) saturate(600%) contrast(0.8); */
}

.missMarker {
    background-size: cover;
    background-image: url("assets/missMarker.gif");
}

.missMarker2 {
    background-size: cover;
    background-color: black;
}

.loginBar {
    border-top: double black;
    border-bottom: double black;
    border-width: 25px;
}

.loginContainer {
    background-image: url("assets/35mm.gif");
    background-size: cover;
}

.titleText {
    font-size: 200px;
    color: white;
    background-image: url("/assets/35mm.gif");

}

.viewTitleText {
    font-size: 100px;
    display: flex;
    width: 100%;
    margin-left: 10px;
    margin-top: 10px;
    justify-content: center;
    color: black;
    background-color: white;
    border: solid white;
}

.viewTitleTextMirror {
    font-size: 200px;
    transform: scale(-1, 1);
}

.gameListContainer {
    display: flex;
    flex-wrap: wrap;
    width: 100%;
    height: 50vh;
}

.newGameListContainer {
    display: flex;
    flex-wrap: wrap;
    justify-content: right;
    align-items: right;
}

.gameList {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
}

.gameContainer {
    background-image: url("/assets/35mm.gif");
    width: 250px;
}

.gamesTitleText {
    font-size: 100px;
}

.matchTitleText {
    background-color: black;
}

.gameViewMenu {
    width: 25%;
    height: 25%;
    padding-top: 80px;
    margin-right: 50px;
    display: flex;
    flex-direction: column;
}

.gameViewShipSelector {
    font-size: 60px;
    font-weight: bold;
    margin-left: 10px;
    margin-right: 10px;
    color: white;
    margin-top: 5px;
    margin-bottom: 5px;
    background-image: url(assets/tumblr_mstgowIyZT1rdu90go1_1280.gif);
    background-size: cover;
    border: solid skyblue;
    height: 150px;
    width: 150px;
}

.opponentShipRender {
    font-size: 60px;
    font-weight: bold;
    margin-left: 10px;
    margin-right: 10px;
    color: red;
    margin-top: 5px;
    margin-bottom: 5px;
    background-image: url(assets/water\ triangle.gif);
    background-size: contain;
    background-position-y: 40%;
    border: solid red;
    height: 150px;
    width: 150px;
}

.gameViewShipSelectorCaption {
    background-color: black;
    color: white;
    margin-left: 25px;
    width: 125px;
    border: solid white;
}

.gameViewMenuButton {
    font-size: 20px;
    width: 33%;
    background-color: black;
    color: white;
    margin-top: 10px;
    margin-bottom: 10px;
    border: white solid 5px;
}

.usernameDisplay {
    font-size: 30px;
    width: 70%;
    height: 60px;
    background: white;
    border: black 10px solid;
    color: black;
    text-transform: uppercase;
}

.gameViewMenuButtonContainer {
    background-image: url(assets/35mm.gif);
    margin-bottom: 30px;
}

.salvoButton {
    width: 300px;
    height: 200px;
    color: white;
    font-size: 50px;
    background-image: url(assets/vhs_static.gif);
    font-weight: bold;
    bottom: 50%;
    left: 43%;
    opacity: .9;
    border: solid 1px white;
    position: absolute;
}

.salvoButton:hover {
    background-image: url(assets/attackAnimation.gif);
    background-size: cover;
    color: white;
    background-position-y: 35%;
    animation: float 2s ease-in-out infinite;
    filter:
        grayscale(100%) brightness(80%) sepia(100%) hue-rotate(-50deg) saturate(600%) contrast(0.8);
}

.shipOutButton {
    width: 300px;
    height: 200px;
    color: white;
    font-size: 50px;
    background-image: url(assets/vhs_static.gif);
    font-weight: bold;
    bottom: 30%;
    left: 43%;
    opacity: .9;
    border: solid 1px white;
    position: absolute;
}

.shipOutButton:hover {
    background-image: url(assets/shipOut.gif);
    background-size: cover;
    color: white;
    background-position-y: 35%;
    animation: float 2s ease-in-out infinite;
    filter:
        grayscale(100%) brightness(80%) sepia(100%) hue-rotate(-170deg) saturate(600%) contrast(0.8);
}

.fleetTitleText {
    font-size: 50px;
    color: skyblue;
    border: solid white;
    background-image: url(assets/vhs_static.gif);
    width: 100%;
    text-align: center;
}

.opponentTitleText {
    font-size: 50px;
    border: solid white;
    background-image: url(assets/vhs_static.gif);
    width: 100%;
    text-align: center;
}

@keyframes float {
    0% {
        box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
        transform: translatey(-3px);
    }

    50% {
        box-shadow: 0 25px 15px 0px rgba(0, 0, 0, 0.2);
        transform: translatey(3px);
    }

    100% {
        box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
        transform: translatey(-3px);
    }
}

.gameViewShipSelector:hover {
    background-image: url(assets/4j3b.gif);
    background-size: cover;
    color: white;
    background-position-y: 35%;
    animation: float 2s ease-in-out infinite;
    filter:
        grayscale(100%) brightness(100%) sepia(100%) hue-rotate(190deg) saturate(600%) contrast(1);
}

.opponentShipRender:hover {
    background-image: url(assets/opponent.gif);
    background-size: cover;
    color: white;
    background-position-y: 35%;
    animation: float 2s ease-in-out infinite;
    filter:
        grayscale(100%) brightness(80%) sepia(100%) hue-rotate(-50deg) saturate(600%) contrast(0.8);
}

.gameViewMenuButton:hover {
    background-image: url(assets/dots-grid.gif);
    background-size: cover;
    color: white;
    background-position-y: 50%;
    filter:
        grayscale(100%) brightness(80%) sepia(100%) hue-rotate(-50deg) saturate(600%) contrast(0.8);
}

/* ----------------------------------------------
 * Generated by Animista on 2019-6-28 16:5:40
 * w: http://animista.net, t: @cssanimista
 * ---------------------------------------------- */

/**
 * ----------------------------------------
 * animation roll-in-blurred-top
 * ----------------------------------------
 */

.roll-in-blurred-top {
    -webkit-animation: roll-in-blurred-top 1.5s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
    animation: roll-in-blurred-top 1.5s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
}

@-webkit-keyframes roll-in-blurred-top {
    0% {
        -webkit-transform: translateY(-800px) rotate(-720deg);
        transform: translateY(-800px) rotate(-720deg);
        -webkit-filter: blur(50px);
        filter: blur(50px);
        opacity: 0;
    }

    100% {
        -webkit-transform: translateY(0) rotate(0deg);
        transform: translateY(0) rotate(0deg);
        -webkit-filter: blur(0);
        filter: blur(0);
        opacity: 1;
    }
}

@keyframes roll-in-blurred-top {
    0% {
        -webkit-transform: translateY(-800px) rotate(-720deg);
        transform: translateY(-800px) rotate(-720deg);
        -webkit-filter: blur(50px);
        filter: blur(50px);
        opacity: 0;
    }

    100% {
        -webkit-transform: translateY(0) rotate(0deg);
        transform: translateY(0) rotate(0deg);
        -webkit-filter: blur(0);
        filter: blur(0);
        opacity: 1;
    }
}

